--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <input type="number" id="howManyCrew">
     <br>
     <button id="button2">Click here to see how much pizza will cost per person</button>
+    <p id="pizzaP"></p>
 
 </body>
 </html>
